--- a/index.html
+++ b/index.html
@@ -5,67 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Kumar | Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
 
-    <nav>
-        <div class="logo">RK<span>.</span></div>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
-    <section class="hero" id="about">
-        <div class="hero-content">
-            <h1>Hi, I'm <span>Rahul Kumar</span></h1>
-            <h3>Full Stack Software Engineer</h3>
-            <p>I'm an M.Tech student at ABV-IIITM Gwalior with a passion for building scalable web applications. I've solved 500+ problems on LeetCode with a peak rating of 1834.</p>
-            <div class="hero-btns">
-                <a href="#projects" class="btn">View Work</a>
-                <a href="https://github.com/Rahul5914" target="_blank" class="btn outline">GitHub</a>
+    <div class="bento-container">
+        <div class="card profile">
+            <span class="badge">Full Stack Software Engineer</span>
+            <h1>Rahul Kumar<span>.</span></h1>
+            <p>M.Tech in Information & Cyber Security at ABV-IIITM Gwalior. Specialized in Python, C++, and Scalable Systems.</p>
+            
+            <div class="social-links-grid">
+                <a href="https://github.com/Rahul5914" class="social-card github">
+                    <i class="fa-brands fa-github"></i>
+                    <span>GitHub</span>
+                </a>
+                <a href="https://www.linkedin.com/in/rahul-kumar-3829b322a/" class="social-card linkedin">
+                    <i class="fa-brands fa-linkedin"></i>
+                    <span>LinkedIn</span>
+                </a>
+                <a href="https://leetcode.com/u/Rahul5914/" class="social-card leetcode">
+                    <i class="fa-solid fa-code"></i>
+                    <span>LeetCode</span>
+                </a>
+                <a href="https://codeforces.com/profile/Rahul5914" class="social-card codeforces">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <span>Codeforces</span>
+                </a>
             </div>
         </div>
-    </section>
 
-    <section id="skills" class="section">
-        <h2 class="title">Technical Skills</h2>
-        <div class="skills-container">
-            <div class="skill-card"><h3>Languages</h3><p>C, C++, Python, JavaScript</p></div>
-            <div class="skill-card"><h3>Backend</h3><p>Python, REST APIs, MVC, SQL</p></div>
-            <div class="skill-card"><h3>Frontend</h3><p>HTML, CSS, JS, Responsive UI</p></div>
-            <div class="skill-card"><h3>Tools</h3><p>Git, GitHub, TensorFlow, Streamlit</p></div>
-        </div>
-    </section>
-
-    <section id="projects" class="section">
-        <h2 class="title">Featured Projects</h2>
-        <div class="project-grid">
-            <div class="project-card">
-                <h3>Multi-Disease Prediction</h3>
-                <p>Full stack web app with REST APIs and modular backend logic. Deployed on Cloud.</p>
-                <span class="tech-stack">Python | Streamlit | REST API</span>
+        <div class="card stats">
+            <div class="stat-box">
+                <span class="value">1834</span>
+                <span class="label">LeetCode Rating</span>
             </div>
-            <div class="project-card">
-                <h3>Face Mask Detection</h3>
-                <p>Backend-driven image processing system focused on performance and reliability.</p>
-                <span class="tech-stack">Python | TensorFlow</span>
+            <div class="stat-box">
+                <span class="value">500+</span>
+                <span class="label">Problems Solved</span>
             </div>
         </div>
-    </section>
 
-    <footer id="contact">
-        <h2>Let's Connect</h2>
-        <p>Email: rkaryan5914@gmail.com</p>
-        <p>Phone: +91-7033319773</p>
-        <div class="socials">
-            <a href="https://linkedin.com/in/rahul-kumar">LinkedIn</a> | 
-            <a href="https://github.com/Rahul5914">GitHub</a>
+        <div class="card education">
+            <h3>Education</h3>
+            <p><strong>M.Tech</strong>: IIITM Gwalior</p>
+            <p><strong>B.Tech</strong>: LNJPIT (8.06 CGPA)</p>
         </div>
-    </footer>
+
+        <div class="card projects">
+            <h3>Featured Projects</h3>
+            <div class="project">
+                <strong>Multi-Disease Prediction</strong>
+                <p>Full-stack app using REST APIs.</p>
+            </div>
+            <div class="project">
+                <strong>Face Mask Detection</strong>
+                <p>TensorFlow image processing system.</p>
+            </div>
+        </div>
+
+        <div class="card skills">
+            <h3>Tech Stack</h3>
+            <div class="tags">
+                <span>Python</span><span>C++</span><span>JavaScript</span><span>SQL</span><span>REST APIs</span><span>Git</span>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
