Refactor index.html for improved layout and styling
Updated the structure and styling of the portfolio page, including new classes and improved layout.

--- a/index.html
+++ b/index.html
@@ -10,66 +10,54 @@
 </head>
 <body>
 
-    <div class="bento-container">
-        <div class="card profile">
-            <span class="badge">Full Stack Software Engineer</span>
+    <div class="bento-wrapper">
+        <div class="card profile-main">
+            <div class="profile-header">
+                <span class="status-pill">● Available for Work</span>
+            </div>
             <h1>Rahul Kumar<span>.</span></h1>
-            <p>M.Tech in Information & Cyber Security at ABV-IIITM Gwalior. Specialized in Python, C++, and Scalable Systems.</p>
-            
-            <div class="social-links-grid">
-                <a href="https://github.com/Rahul5914" class="social-card github">
-                    <i class="fa-brands fa-github"></i>
-                    <span>GitHub</span>
-                </a>
-                <a href="https://www.linkedin.com/in/rahul-kumar-3829b322a/" class="social-card linkedin">
-                    <i class="fa-brands fa-linkedin"></i>
-                    <span>LinkedIn</span>
-                </a>
-                <a href="https://leetcode.com/u/Rahul5914/" class="social-card leetcode">
-                    <i class="fa-solid fa-code"></i>
-                    <span>LeetCode</span>
-                </a>
-                <a href="https://codeforces.com/profile/Rahul5914" class="social-card codeforces">
-                    <i class="fa-solid fa-chart-line"></i>
-                    <span>Codeforces</span>
-                </a>
+            <p>Full Stack Software Engineer[cite: 4]. M.Tech in Information & Cyber Security at ABV-IIITM Gwalior[cite: 14, 15].</p>
+            <div class="social-links">
+                <a href="https://github.com/Rahul5914" class="s-btn"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/rahul-kumar-3829b322a/" class="s-btn"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://leetcode.com/u/Rahul5914/" class="s-btn"><i class="fa-solid fa-code"></i></a>
+                <a href="https://codeforces.com/contests" class="s-btn"><i class="fa-solid fa-chart-line"></i></a>
             </div>
         </div>
 
-        <div class="card stats">
-            <div class="stat-box">
-                <span class="value">1834</span>
-                <span class="label">LeetCode Rating</span>
+        <div class="card leetcode-stats">
+            <div class="stat-circle">
+                <span class="stat-num">1834</span>
+                <span class="stat-label">LeetCode Rating [cite: 6]</span>
             </div>
-            <div class="stat-box">
-                <span class="value">500+</span>
-                <span class="label">Problems Solved</span>
-            </div>
+            <p>Solved 500+ Problems [cite: 6, 25]</p>
         </div>
 
-        <div class="card education">
-            <h3>Education</h3>
-            <p><strong>M.Tech</strong>: IIITM Gwalior</p>
-            <p><strong>B.Tech</strong>: LNJPIT (8.06 CGPA)</p>
-        </div>
-
-        <div class="card projects">
-            <h3>Featured Projects</h3>
-            <div class="project">
-                <strong>Multi-Disease Prediction</strong>
-                <p>Full-stack app using REST APIs.</p>
-            </div>
-            <div class="project">
-                <strong>Face Mask Detection</strong>
-                <p>TensorFlow image processing system.</p>
-            </div>
-        </div>
-
-        <div class="card skills">
+        <div class="card tech-stack">
             <h3>Tech Stack</h3>
-            <div class="tags">
-                <span>Python</span><span>C++</span><span>JavaScript</span><span>SQL</span><span>REST APIs</span><span>Git</span>
+            <div class="tag-container">
+                <span>Python</span><span>C++</span><span>JavaScript</span><span>REST APIs</span><span>SQL</span><span>TensorFlow</span> [cite: 8, 9, 10, 22]
             </div>
+        </div>
+
+        <div class="card projects-bento">
+            <h3>Featured Projects</h3>
+            <div class="p-list">
+                <div class="p-item">
+                    <strong>Multi-Disease Prediction</strong> [cite: 17]
+                    <p>Full stack web app with REST APIs[cite: 17, 19].</p>
+                </div>
+                <div class="p-item">
+                    <strong>Face Mask Detection</strong> [cite: 21]
+                    <p>Backend image processing system[cite: 23].</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card edu-bento">
+            <h3>Education</h3>
+            <p><strong>M.Tech:</strong> IIITM Gwalior [cite: 13, 15]</p>
+            <p><strong>B.Tech:</strong> LNJPIT (8.06 CGPA) [cite: 11, 12]</p>
         </div>
     </div>
 
